--- a/package.json
+++ b/package.json
@@ -42,10 +42,14 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.11.1",
     "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.0",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
