--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
@@ -48,10 +50,9 @@
     "axios": "^1.6.1",
     "dayjs": "^1.11.10",
     "electron-squirrel-startup": "^1.0.0",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.18.0",
     "reset-css": "^5.0.2"
   }
