--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v2ex-electron",
-  "productName": "v2ex-electron",
+  "productName": "V2EX",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
@@ -19,10 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
-    "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-rpm": "^6.4.2",
-    "@electron-forge/maker-squirrel": "^6.4.2",
-    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/maker-dmg": "^7.1.0",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
     "@types/react": "^18.2.37",
