--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-forge/maker-dmg": "^7.1.0",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
+    "@electron-forge/publisher-bitbucket": "^7.1.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
