--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "v2ex-electron",
   "productName": "V2EX",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "V2EX Electron App",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -11,7 +11,6 @@
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
-  "keywords": [],
   "author": {
     "name": "hzy1721",
     "email": "hzy1721@qq.com"
@@ -24,6 +23,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
     "@electron-forge/publisher-bitbucket": "^7.1.0",
+    "@electron-forge/publisher-github": "^7.1.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
